# supertag

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  README.rst  index.html  requirements.txt
.github/: FUNDING.yml  SUPPORT.md  pull_request_template.md
cla/: index.html
data/appimage/: AppRun  tag.desktop
docs/: architecture.html  config.html  database_schema.html  development.html  faq.html  genindex.html  glossary.html  index.html  installation.html  objects.inv  os_behavior.html  searchindex.js  tag_groups.html  tips_and_tricks.html  usage.html
docs/_sources/: architecture.rst.txt  config.rst.txt  database_schema.rst.txt  development.rst.txt  faq.rst.txt  glossary.rst.txt  index.rst.txt  installation.rst.txt  os_behavior.rst.txt  tag_groups.rst.txt  tips_and_tricks.rst.txt  usage.rst.txt
docs/_sources/usage/: creating_tags.rst.txt  linking.rst.txt  merging_tags.rst.txt  (+5 more)
docs/cla/: style.css
docs/usage/: creating_tags.html  linking.html  merging_tags.html  mounting.html  pinning.html  quickstart.html  removing_tags.html  tag_groups.html
fuse-sys/: Cargo.toml  build.rs  wrapper.h
fuse-sys/src/: err.rs  lib.rs
fuse-sys/src/bindings/: conf.rs  mod.rs  test_bindings.rs
logo/: VolumeIcon.icns  render.sh  supertag.blend
scripts/: build_appimage.sh  cleanup_test_mounts.sh  itest.sh  reset_collection.sh  run_tests.sh
source/: architecture.rst  conf.py  database_schema.rst  development.rst  faq.rst  glossary.rst  index.rst  installation.rst  os_behavior.rst  pinning.rst  tips_and_tricks.rst
source/usage/: creating_tags.rst  linking.rst  merging_tags.rst  mounting.rst  pinning.rst  quickstart.rst  tag_groups.rst
src/: lib.rs  tag.rs
src/cli/: ln.rs  mod.rs  rename.rs  rm.rs  rmdir.rs
src/common/: constants.rs  err.rs  managed_file.rs  mod.rs  xattr.rs
src/fuse/: err.rs  mod.rs  opcache.rs  util.rs
src/platform/: linux.rs  mod.rs
src/sql/: mod.rs  tpool.rs  types.rs
tests/: integration_tests.rs
tests/common/: dirs.rs  macros.rs  mod.rs  notify.rs  td.rs
tests/itests/: alias.rs  basic.rs  cache.rs  mod.rs  move_merge.rs  mtime.rs  not.rs  notify.rs  perms.rs  pins.rs  remove.rs  taggroup.rs
(+46 files in other folders)
