[package]
name = "supertag"
version = "0.1.2"
authors = ["Andrew Moffat <arwmoffat@gmail.com>"]
edition = "2018"
description = "Tag-based filesystem"
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/amoffat/supertag"
keywords = ["fuse", "tag", "filesystem", "fs"]
categories = ["filesystem", "os::unix-apis", "os::macos-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "fuse-sys"]

[dependencies]
fuse-sys = { path = "./fuse-sys" }
rusqlite = "0.24.1"
nix = "0.19.1"
libc = "0.2"
clap = "2.33.3"
directories = "3.0"
config = "0.10.1"
log = {version = "0.4", features = ["release_max_level_error"]}
fern = "0.6"
chrono = "0.4"
signal-hook = "0.2.1"
time = "0.2.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
regex = "1.4.2"
metrohash = "1.0.6"
parking_lot = "0.11.1"
md5 = "0.7.0"
rand = "0.7.3"
xattr = "0.2.2"
ttl_cache = "0.5.1"
byteorder = "1.3.4"
walkdir = "2.3.1"
icns = "0.3.1"
crossbeam = "0.8.0"
uuid = { version="0.8.1", features = ["v4"] }
opener = "0.4.1"
notify-rust = "4.0.0"

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.7.0"


[dev-dependencies]
tempfile = "3.1.0"
rand = "0.7.3"
spin_sleep = "0.3.7"

[[bin]]
name = "tag"
path = "src/tag.rs"